--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
   "devDependencies": {
     "ts-loader": "^7.0.1",
     "tslint": "^6.1.1",
+    "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.8.3",
+    "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3",
-    "webpack": "^4.43.0"
+    "webpack-dev-server": "^3.10.3"
   }
 }
